# sfml_phs_simulator

./: CMakeLists.txt  PHYSICS_FEATURES.md  run.sh
src/: main.cpp
